# youtube-data-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: data_processing.py  openrouter.py  streamlit_app.py  streamlit_server.py  youtube.py
tests/: test_data_processing.py  test_main.py  test_youtube_live.py
